[gd_scene load_steps=3 format=3 uid="uid://b7tt80wmavojc"]

[ext_resource type="Script" uid="uid://boovyg7r4et0v" path="res://UI/inventory_slot.gd" id="1_1njb3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6uy6"]
bg_color = Color(1, 0.441892, 0.141798, 1)
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.443137, 0.141176, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="InventorySlot" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.486275)
offset_right = 142.0
offset_bottom = 26.0
script = ExtResource("1_1njb3")

[node name="SelectBorder" type="Panel" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g6uy6")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 3

[node name="NameLabel" type="Label" parent="HBox/MarginContainer"]
layout_mode = 2
text = "name_here"
clip_text = true

[node name="MarginContainer2" type="MarginContainer" parent="HBox"]
layout_mode = 2
theme_override_constants/margin_bottom = 3

[node name="StackLabel" type="Label" parent="HBox/MarginContainer2"]
layout_mode = 2
text = "x0"

[node name="MarginContainer3" type="MarginContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 3

[node name="WeigthLabel" type="Label" parent="HBox/MarginContainer3"]
layout_mode = 2
text = "0kg"
horizontal_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
